fix appContainer overflow Remove white background in navBar expand animation.

--- a/imports/ui/stylesheets/player.less
+++ b/imports/ui/stylesheets/player.less
@@ -9,11 +9,11 @@
   &.fullscreen {
     left: 0px;
     width: 100%;
-    transition: 0s;
-    .player-overlay, .player-controls {
-      left: 0px;
-      width: 100%;
-      transition: 0s;
+    .player-overlay{
+      padding-left: 10px;
+    }
+    .player-controls {
+      padding-left: 20px;
     }
   }
 }
@@ -27,10 +27,10 @@
 }
 .player-overlay {
   position: absolute;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 70px;
   top: 0px;
-  left: 60px;
-  width: ~"calc(100% - 60px)";
+  left: 0px;
+  width: 100%;
   height: 100%;
   color: white;
   background-color: rgba(0,0,0,0.5);
@@ -150,11 +150,11 @@
 
 .player-controls {
   width: 100%;
-  padding: 10px 20px 20px 20px;
+  padding: 10px 20px 20px 80px;
   z-index: 100;
   position: absolute;
-  left: 60px;
-  width: ~"calc(100% - 60px)";
+  left: 0px;
+  width: "100%";
   box-sizing: border-box;
   bottom: 0px;
   transition: inherit;
